# miaou-composer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dune-project  miaou-composer.opam
.specify/memory/: constitution.md
examples/: create_repo.json
lib/bridge/: action_codec.ml  dune  layout_codec.ml  page_codec.ml  tool_codec.ml  widget_factory.ml
lib/compositor/: action.ml  ansi_strip.ml  catalog.ml  dune  focus_manager.ml  layout_tree.ml  page.ml  session.ml  tool_def.ml  validator.ml  widget_box.ml  widget_registry.ml  wiring.ml
lib/export/: dune  json_export.ml
pages/: composer.json  lazygit_light.json
specs/001-miaou-composer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-miaou-composer/checklists/: requirements.md
specs/001-miaou-composer/contracts/: mcp-tools.md
specs/002-page-designer-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-page-designer-tui/checklists/: requirements.md
specs/002-page-designer-tui/contracts/: compositor_api.md  designer_page_sig.md
test/: dune  test_compositor.ml  test_designer.ml
