(library
 (name miaou_composer_lib)
 (libraries
  miaou-core.core
  miaou-core.internals
  miaou-core.interfaces
  miaou-core.widgets.input
  miaou-core.widgets.display
  miaou-core.widgets.layout
  miaou-core.widgets.navigation
  miaou-core.style
  miaou-core.lib_miaou_internal
  yojson
  lambda-term))
